--- a/betRef/betRef_2.html
+++ b/betRef/betRef_2.html
@@ -1,6 +1,6 @@
 <div class="contBox-min">
     <!-- 新聞內頁 -->
-    <div class="newsRef_box"  id="newsCnt">
+    <div class="newsRef_box" id="newsCnt">
         <div class="newsRef_cnt">
 
             <!-- === 文章圖片 === -->
@@ -223,7 +223,7 @@
 
 <script>
     Vue.createApp({
-        data() { 
+        data() {
             return {
                 newsMenu: {
                     newsHot: '',
@@ -249,13 +249,13 @@
                 self.localNum = sessionStorage.getItem('new_betRef');
 
                 function ready() {
-                    if (chReady[0] ) {
+                    if (chReady[0]) {
                         indexVue.onLoad = false;
                     }
                 }
 
                 $.ajax({
-                    url: "https://vnc88.awgstudio.com/api/homenews/list",
+                    url: "https://www.vnc8888.com/api/homenews/list",
                     dataType: "json",
                     success: function(data) {
                         self.newsMenu.newsHot = data;
