--- a/betRef/betRef_3.html
+++ b/betRef/betRef_3.html
@@ -82,7 +82,7 @@
 
         </div>
 
-         <div class="newsCnt_menu">
+        <div class="newsCnt_menu">
             <div>
                 <div class="mainMsg-title">Tin quan trọng</div>
                 <div class="newsCnt_scroll">
@@ -120,7 +120,7 @@
 
 <script>
     Vue.createApp({
-        data() { 
+        data() {
             return {
                 newsMenu: {
                     newsHot: '',
@@ -146,13 +146,13 @@
                 self.localNum = sessionStorage.getItem('new_betRef');
 
                 function ready() {
-                    if (chReady[0] ) {
+                    if (chReady[0]) {
                         indexVue.onLoad = false;
                     }
                 }
 
                 $.ajax({
-                    url: "https://vnc88.awgstudio.com/api/homenews/list",
+                    url: "https://www.vnc8888.com/api/homenews/list",
                     dataType: "json",
                     success: function(data) {
                         self.newsMenu.newsHot = data;
