--- a/betRef/betRef_5.html
+++ b/betRef/betRef_5.html
@@ -1,6 +1,6 @@
 <div class="contBox-min">
     <!-- 新聞內頁 -->
-    <div class="newsRef_box"  id="newsCnt">
+    <div class="newsRef_box" id="newsCnt">
         <div class="newsRef_cnt">
 
             <!-- === 文章圖片 === -->
@@ -22,8 +22,9 @@
                             ký hợp pháp của Costa Rica và được chính cơ quan này công nhận là một nhà cái uy tín, chất lượng và đáng tin cậy nhất. Mục tiêu của <a href="https://www.ae3888.com/?agt=amg668" target="_blank" rel="noopener"><span style="color:red;">AE888</span></a>là
                             tạo ra một sân chơi giải trí chất lượng cao, đa dạng nhất thị trường cá cược trực tuyến. Mang lại cho người chơi sự lựa chọn hợp lý, thú vị cùng dịch vụ chăm sóc khách hàng nhanh chóng, tiện lợi và tận tình nhất. Trong thị
                             trường trò chơi trực tuyến ngày càng sôi động và lớn mạnh, ngoài các trò chơi, an ninh mạng là vấn đề được khách hàng quan tâm đến nhiều nhất. Khi đến với
-                            <a href="https://www.ae3888.com/?agt=amg668" target="_blank" rel="noopener"><span style="color:red;"> nhà cái AE888</span></a>, quý khách hãy yên tâm về những lo ngại đó bởi chúng tôi đã thành lập một trung tâm bảo mật mạng, đảm bảo tuyệt đối an ninh mạng của quý khách. Hơn nữa, AE888 đã được GEO TRUST
-                            công nhận và cấp chứng chỉ website an toàn nhất, toàn bộ thông tin của các thành viên đều được mã hóa để đảm bảo sự riêng tư tuyệt đối của người chơi.
+                            <a href="https://www.ae3888.com/?agt=amg668" target="_blank" rel="noopener"><span style="color:red;"> nhà cái AE888</span></a>, quý khách hãy yên tâm về những lo ngại đó bởi chúng tôi đã thành lập một trung tâm bảo mật mạng,
+                            đảm bảo tuyệt đối an ninh mạng của quý khách. Hơn nữa, AE888 đã được GEO TRUST công nhận và cấp chứng chỉ website an toàn nhất, toàn bộ thông tin của các thành viên đều được mã hóa để đảm bảo sự riêng tư tuyệt đối của người
+                            chơi.
                         </li>
                     </li>
                 </ul>
@@ -206,7 +207,7 @@
 
 <script>
     Vue.createApp({
-        data() { 
+        data() {
             return {
                 newsMenu: {
                     newsHot: '',
@@ -232,13 +233,13 @@
                 self.localNum = sessionStorage.getItem('new_betRef');
 
                 function ready() {
-                    if (chReady[0] ) {
+                    if (chReady[0]) {
                         indexVue.onLoad = false;
                     }
                 }
 
                 $.ajax({
-                    url: "https://vnc88.awgstudio.com/api/homenews/list",
+                    url: "https://www.vnc8888.com/api/homenews/list",
                     dataType: "json",
                     success: function(data) {
                         self.newsMenu.newsHot = data;
