--- a/index.html
+++ b/index.html
@@ -991,7 +991,8 @@
             this.verify("mainVerify");
             this.verify("forgetVerify");
             this.verify("regdVerify");
-            this.ckLogin()
+            this.ckLogin();
+            this.floatHd();
 
             window.addEventListener('resize', this.winResize);
             window.addEventListener('scroll', this.winScroll);
